# bincc

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  build_doc.sh  rustfmt.toml
cmake/Modules/: FindBAP.cmake
experiments/: README.md  calculate_metrics.py  function_names.csv  generate_ground_truth.py  requirements.txt  rq1.py  rq4.py  run_rq2.sh
experiments/comparison/: bindiff_du_cp.csv  bindiff_du_csplit.csv  bindiff_du_dir.csv  bindiff_du_du.csv  bindiff_du_expr.csv  bindiff_du_ls.csv  bindiff_du_mv.csv  bindiff_du_nl.csv  bindiff_du_ptx.csv  bindiff_du_sort.csv  bindiff_du_split.csv  compare.py  cp.BinExport  csplit.BinExport  deepbindiff_du_cp_matches.txt  deepbindiff_du_cp_nodeIndexToCode.txt  deepbindiff_du_csplit_matches.txt  deepbindiff_du_csplit_nodeIndexToCode.txt  deepbindiff_du_dir_matches.txt  deepbindiff_du_dir_nodeIndexToCode.txt  deepbindiff_du_du_matches.txt  deepbindiff_du_du_nodeIndexToCode.txt  deepbindiff_du_expr_matches.txt  deepbindiff_du_expr_nodeIndexToCode.txt  deepbindiff_du_ls_matches.txt  deepbindiff_du_ls_nodeIndexToCode.txt  deepbindiff_du_mv_matches.txt  deepbindiff_du_mv_nodeIndexToCode.txt  deepbindiff_du_nl_matches.txt  deepbindiff_du_nl_nodeIndexToCode.txt  deepbindiff_du_ptx_matches.txt  deepbindiff_du_ptx_nodeIndexToCode.txt  deepbindiff_du_sort_matches.txt  deepbindiff_du_sort_nodeIndexToCode.txt  deepbindiff_du_split_matches.txt  deepbindiff_du_split_nodeIndexToCode.txt  dir.BinExport  du_x86.BinExport  expr.BinExport  ls.BinExport  (+5 more)
extractor/: Cargo.toml
extractor/src/: main.rs
libcc/: Cargo.toml
libcc/resources/tests/: plaintext  x86_64
libcc/src/analysis/: blocks.rs  cfg.rs  cfs.rs  comparator.rs  graph.rs  mod.rs
libcc/src/disasm/: architectures.rs  disassembler.rs  mod.rs  radare2.rs
resources/tests/: aarch64  armhf  riscv  x86
rq1/: Cargo.toml
rq1/src/: main.rs
rq2/: Cargo.toml
rq2/src/: main.rs
src/: bcc.rs  bincc.rs  lib.rs  main.cpp  main.rs  rq1.rs  rq4.rs
src/analysis/: abstract_block.cpp  abstract_block.hpp  acyclic_block.cpp  acyclic_block.hpp  analysis.cpp  analysis.hpp  analysis_x86.cpp  analysis_x86.hpp  basic_block.cpp  basic_block.hpp  blocks.rs  cfg.cpp  cfg.hpp  cfg.rs  cfs.cpp  cfs.hpp  cfs.rs  comparator.rs  comparison.cpp  comparison.hpp  cyclic_block.cpp  cyclic_block.hpp  graph.rs  mod.rs
src/architectures/: architecture.hpp  architecture_arm.cpp  architecture_arm.hpp  architecture_x86.cpp  architecture_x86.hpp
src/disasm/: architectures.rs  disassembler.rs  function.rs  mod.rs  radare2.rs  statement.rs
src/disassembler/: R2Pipe.cpp  R2Pipe.hpp  architecture.hpp  disassembler.cpp  disassembler.hpp  function.cpp  function.hpp  info.cpp  info.hpp  r2_func.cpp  r2_func.hpp  r2_info.cpp  r2_info.hpp  r2_pipe.cpp  r2_pipe.hpp  r2_response.hpp  r2_stmt.cpp  r2_stmt.hpp  r2pipe.cpp  r2pipe.hpp  statement.cpp  statement.hpp
src/disassembler/bap/: bap_disassembler.cpp  bap_disassembler.hpp
src/disassembler/radare2/: r2_disassembler.cpp  r2_disassembler.hpp  r2_func.cpp  r2_func.hpp  r2_info.cpp  r2_info.hpp  r2_json_parser.cpp  r2_json_parser.hpp  r2_pipe.cpp  r2_pipe.hpp  r2_response.hpp  r2_stmt.cpp  r2_stmt.hpp
src/multithreading/: spinlock.hpp  synchronized_cout.hpp  synchronized_queue.hpp
src/utility/: settings.cpp  settings.hpp
test/: main_test.cpp
test/analysis/: abstract_block_tests.cpp  analysis_tests.cpp  analysis_x86_tests.cpp  architecture_tests.cpp  basic_block_tests.cpp  blocks_tests.cpp  cfg_tests.cpp  cfs_tests.cpp  comparison_tests.cpp
test/disassembler/: R2PipeTests.cpp  r2_pipe_tests.cpp  r2_response_tests.cpp  statement_tests.cpp
test/disassembler/radare2/: r2_disassembler_tests.cpp  r2_pipe_tests.cpp  r2_response_tests.cpp
test/resources/: add_arm  add_x86  ls_unstripped_arm  ls_unstripped_x86  quicksort_x86  touch_unstripped
