[package]
name = "bcc"
description = "Checks for similarities among different binaries."
version = "0.1.0"
authors = [
    "Davide Pizzolotto <davide.pizzolotto@gmail.com>"
]
edition = "2021"
license = "MIT"
default-run = "bcc"
publish = false

[[bin]]
name = "bcc"
path = "src/bcc.rs"
doc = false
required-features=["build-bin"]

[[bin]]
name = "rq1"
path = "src/rq1.rs"
doc = false
required-features=["build-bin"]

[[bin]]
name = "rq4"
path = "src/rq4.rs"
doc = false
required-features=["build-bin"]


[dependencies]
#lib
fnv = "1.0"
parse_int = "0.6"
r2pipe = { git = "https://github.com/davidepi/r2pipe.rs.git", branch = "async"}
regex = "1.6"
log = "0.4"
maplit = "1.0"
lazy_static = "1.4"
#bin
clap={version="4.0", features=["derive"], optional=true}
indicatif={version="0.17", optional=true}
rand = {version="0.8", optional=true}
tokio = {version = "1", features=["time", "rt-multi-thread", "macros"], optional=true}
futures = {version="0.3", optional=true}
num_cpus = {version="1.13", optional=true}

[dev-dependencies]
serial_test = "0.9"
tempfile="3.3"

[features]
default=["build-bin"]
build-bin=["clap","indicatif","rand","tokio","futures","num_cpus"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
strip = true
opt-level = 3
