[package]
name = "bcc"
description = "Checks for similarities among different binaries."
version = "0.1.0"
authors = [
    "Davide Pizzolotto <davide.pizzolotto@gmail.com>"
]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
fnv = "1.0.7"
parse_int = "0.6"
r2pipe = { git = "https://github.com/davidepi/r2pipe.rs.git", branch = "async", optional = true }
regex = "1"
log = "0.4"
maplit = "1.0.2"
lazy_static = "1.4.0"

[dev-dependencies]
serial_test = "0.8" # needed only by radare2, but dev-dependencies are not allowed to be optional
tempfile="3"

[features]
radare2 = ["r2pipe"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
