[package]
name = "rq1"
description = "Research question #1"
version = "0.1.0"
authors = [
    "Davide Pizzolotto <davide.pizzolotto@gmail.com>"
]
edition = "2021"
license = "MIT"
publish = false

[[bin]]
name = "rq1"
path = "src/main.rs"
doc = false

[dependencies]
fnv = "1.0.7"
parse_int = "0.6"
bcc = {path="../libcc"}
regex = "1"
clap={version="3.1", features=["derive"]}
indicatif="0.16"
rand = "0.8"
tokio = {version = "1", features=["time", "rt-multi-thread", "macros"]}
futures = "0.3"
num_cpus = "1"
