[package]
name = "rq2"
description = "Research question #2"
version = "0.1.0"
authors = [
    "Davide Pizzolotto <davide.pizzolotto@gmail.com>"
]
edition = "2018"
license = "MIT"
publish = false

[[bin]]
name = "rq2"
path = "src/main.rs"
doc = false

[dependencies]
fnv = "1.0.7"
parse_int = "0.5"
bcc = {path="../libcc", features=["radare2"]}
regex = "1"
clap={version="3.1", features=["derive"]}
indicatif="0.16"
rand = "0.8"
rayon = "1.5"
